treetop/strings.treetop
grammar Strings
    rule body
        (statement)+ <BodyNode>
    end

    rule statement
        white (block / assignment / comment) <StatementNode>
    end

    rule block
        scope:string white '{' body white '}' white ';' white <BlockNode>
    end
    
    rule assignment
        key:string white '=' white value:string white ';' <AssignmentNode>
    end
    
    rule comment
        '/*' (!'*/' .)* '*/' white <CommentNode>
    end

    rule string
        '"' body:(!'"' . / '\"')* '"' <StringNode>
        /
        '\'' body:(!'\'' . / '\\\'')* '\'' <StringNode>
    end
    
    rule white
        [ \t\n]*
    end
end
